# Principles-of-Rocket-Engines-Project-2

./: .gitignore  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: build.yml
RPA-4.0.7/: RPA.bat  qwt-LICENSE.txt
RPA-4.0.7/examples/: A-1.cfg  Aestus.cfg  F-1  H2O2.cfg  H2O_1000K.cfg  N2_gas.cfg  P80.cfg  RD-170.cfg  RL10B2.cfg  SSME 40k.cfg  SSME 40k_c.cfg
RPA-4.0.7/examples/scripting/: chamber.js  chamber_design_1.js  chamber_design_3.js  chamber_stations_1.js  chamber_stations_2.js  chamber_stations_3.js  combustor_1.js  config_file_2.js  config_file_3.js  config_file_4.js  mixture_1.js  mixture_2.js  newton.js  propellant.js  propulsion_analysis_1.js  reaction_products.js  theoretical_performance_1.js  theoretical_performance_2.js  theoretical_throttling_performance_1.js  thermal_analysis_2.js  thermal_analysis_3.js  thermal_analysis_functions.js
RPA-4.0.7/examples/scripting/server-mode-octave/: README.txt  helper.js  test.js  test_server_1.m
RPA-4.0.7/resources/: properties.inp  thermo.inp
SLS_ThermoCalc/: .gitignore  CMakeLists.txt  README.md  SLS_ThermoCalc.pro  build.sh
SLS_ThermoCalc/include/: constants.h  mainwindow.h  matrix_solver.h  nasa_cea_data.h  propellant_db.h  thermo_core.h
SLS_ThermoCalc/presets/: J-2X.json  README.md  RL-10B2.json  RL10A3-3A.json  RS-25_SSME.json  Raptor.json  SSME_40k.json  Vulcain-2.json  YF-77.json  custom_template.json
SLS_ThermoCalc/resources/: resources.qrc
SLS_ThermoCalc/src/: main.cpp  main_cli.c  mainwindow.cpp  matrix_solver.c  propellant_db.c  thermo_core.c
SLS_ThermoCalc/ui/: mainwindow.ui
doc/: PPT_报告内容.md  PROJECT_REPORT.md
references/RPA-4.0.7/: RPA-EXPORT_CONTROL_COMPLIANCE.txt  RPA-LICENSE.txt
references/RPA-4.0.7/examples/: 8D74.cfg  AT_WL.cfg  H2O_2000K.cfg  H2O_3000K.cfg  H2O_gas.cfg  N2-gas.cfg  RD-119.cfg  RD-275.cfg  RL10A3-3A.cfg  Vulcain 2.cfg
references/RPA-4.0.7/examples/scripting/: chamber_design_2.js  chamber_design_4.js  chamber_station_functions.js  combustor_2.js  combustor_nested_analysis.js  config_file_1.js  custom_log.js  hydrazine.js  migrate_cfg.js  output_1.js  output_2.js  propulsion_analysis_2.js  propulsion_analysis_3.js  theoretical_performance_3.js  theoretical_performance_4.js  thermal_analysis_1.js
references/RPA-4.0.7/examples/scripting/server-mode-octave/: helper.m  test_server_2.m
references/公式、报告/: FRBMain.xdv  baogao.tex  图表.tex  热力计算流程及公式.xdv
references/热力计算-燃烧室+喷管-待完善/: 7系数多项式问题分析.md  RS-25in.in  combuster.h  relichanshu.h  test_all
references/程序/: CH4-O2end.fig  figure1.fig  gas.cpp  printfigure.m  test.cpp
公式、报告/: 热力计算流程及公式.tex
热力计算-燃烧室+喷管-待完善/: Gassolve.h  jiading.h  nozzle.h  test_all.cpp  输入输出说明.md
程序/: gas  outdata.csv  printfigure_all.m  test
程序/gas.dSYM/Contents/Resources/DWARF/: gas
程序/gas.dSYM/Contents/Resources/Relocations/aarch64/: gas.yml
程序/output/: outdata.csv
程序/test.dSYM/Contents/Resources/DWARF/: test
程序/test.dSYM/Contents/Resources/Relocations/aarch64/: test.yml
